# irun

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  runapp  runapp.cmd  runapp.ps1  runner  runner.py
apps/baker/: README.md  pyproject.toml
apps/baker/src/baker/: __init__.py  __main__.py  app.py  app_config.py  monorepo_paths.py  runtime_log.py
apps/baker/src/baker/controls/: fly_camera.py
apps/baker/src/baker/editor/: __init__.py  layout.py  orbit_camera.py  picking.py  scene_objects.py  ui.py
apps/baker/src/baker/render/: tonemapping.py
apps/baker/src/baker/ui/: hud.py  layout.py
apps/ivan/: README.md  pyproject.toml
apps/ivan/assets/incoming/: .gitignore
apps/ivan/assets/maps/demo/: demo.map  demo_alt.map  demo_alt.map.run.json
apps/ivan/assets/maps/light-test/: light-test.map
apps/ivan/assets/maps/m260211_031931/: m260211_031931.map
apps/ivan/assets/maps/m260211_032352/: m260211_032352.map
apps/ivan/assets/raw/: surf_ski_11.rar  surf_ski_4_2.rar
apps/ivan/assets/shaders/: README.md
apps/ivan/assets/shaders/world/: lightmap_120.frag  lightmap_120.vert
apps/ivan/replays/: 20260208_025757_surf_ski_4_2.ivan_demo.json  20260208_031426_surf_ski_4_2.ivan_demo.json  20260208_043052_surf_ski_4_2.ivan_demo.json  20260208_060634_de_dust2.ivan_demo.json  20260208_211025_de_rats_zabka.ivan_demo.json  20260208_215748_c3a2b.ivan_demo.json
apps/ivan/src/ivan/: __init__.py  __main__.py  app_config.py  game.py  mcp_server.py  paths.py  state.py
apps/ivan/src/ivan/common/: __init__.py  aabb.py  error_log.py
apps/ivan/src/ivan/console/: __init__.py  autotune_bindings.py  command_bus.py  control_server.py  core.py  ivan_bindings.py  line_bus.py  scene_runtime.py  server_bindings.py
apps/ivan/src/ivan/course/: __init__.py  time_trial.py  volumes.py
apps/ivan/src/ivan/game/: __init__.py  animation_observer.py  app.py  audio_system.py  autotune.py  camera_feedback_observer.py  camera_height_observer.py  camera_observer.py  camera_tilt_observer.py  combat_fx.py  combat_system.py  determinism.py  feel_capture_flow.py  feel_diagnostics.py  feel_feedback.py  feel_metrics.py  grapple_rope.py  hooks.py  input_system.py  menu_flow.py  netcode.py  time_trial_markers.py  transport_system.py  tuning_backups.py  tuning_profiles.py
apps/ivan/src/ivan/games/: __init__.py  markers.py  mode_picker_ui.py  race_runtime.py  ui_feedback.py
apps/ivan/src/ivan/maps/: brush_geometry.py  bundle_io.py  catalog.py  goldsrc_compile.py  map_converter.py  map_parser.py  material_defs.py  resource_pack.py  run_metadata.py  source_compile.py  steam.py
apps/ivan/src/ivan/modes/: __init__.py  base.py  free_run.py  loader.py  time_trial.py
apps/ivan/src/ivan/net/: __init__.py  client.py  protocol.py  relevance.py  server.py
apps/ivan/src/ivan/physics/: __init__.py  collision_world.py  player_controller.py  player_controller_actions.py  player_controller_collision.py  player_controller_kinematics.py  player_controller_momentum.py  player_controller_state.py  player_controller_surf.py  tuning.py
apps/ivan/src/ivan/render/: __init__.py  shader_catalog.py
apps/ivan/src/ivan/replays/: __init__.py  compare.py  demo.py  telemetry.py  (+1 more)
apps/ivan/tests/: test_audio_system.py  test_autotune.py  test_brush_uv_mapping.py  test_camera_feedback_observer.py  test_camera_height_observer.py  test_camera_tilt_observer.py  test_combat_system.py  test_console_command_bus.py  test_console_core.py  test_console_ivan_bindings.py  test_course_volumes.py  test_debug_menu_wiring.py  test_debug_tuning_coverage.py  test_determinism_trace.py  test_error_log.py  test_feel_capture_flow.py  test_feel_capture_ui_import.py  test_feel_feedback.py  test_games_race_runtime.py  test_goldsrc_compile.py  test_goldsrc_pvs_culling.py  test_import.py  test_input_system.py  test_lightstyles.py  test_loading_report.py  test_loading_resource_packs.py  test_map_catalog.py  test_map_pipeline_profiles.py  test_map_texture_cache.py  test_modes_loader.py  test_modes_time_trial.py  test_motion_config.py  test_network_relevance.py  test_network_sync.py  test_packed_bundle_io.py  test_pause_menu_import.py  test_replay_compare.py  test_replay_demo.py  test_replay_determinism_verify.py  test_replay_input_fidelity.py  (+13 more)
apps/ivan/tools/: bake_map.py  build_dust2_assets.py  build_source_bsp_assets.py  loading_benchmark.py  mcp_scope04_demo.py  pack_irunmap.py  pack_map.py  pipeline_profiles.py  scope05_rollout_validation.py  sync_trenchbroom_profile.py  testmap.py  vtf_decode.py
apps/ivan/trenchbroom/: GameConfig.cfg  README.md  ivan.fgd
apps/launcher/: README.md  pyproject.toml
apps/launcher/src/launcher/: __init__.py  __main__.py  actions.py  app.py  commands.py  config.py  map_browser.py  pack_browser.py  runflow.py
apps/launcher/tests/: test_commands.py  test_pack_browser.py  test_runflow.py
apps/mvp/: README.md  pyproject.toml
apps/mvp/src/mvp/: __main__.py  game.py
apps/mvp/tests/: test_import.py
apps/ui_kit/: README.md  ROADMAP.md  pyproject.toml
apps/ui_kit/src/irun_ui_kit/: __init__.py  demo.py  layout.py  renderer.py  theme.py
apps/ui_kit/tests/: test_layout.py
(+135 files in other folders)
