[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irun-baker"
version = "0.1.0"
description = "IRUN Baker (mapperoni): map viewer + import/bake companion app (viewer MVP)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "IRUN Contributors" }]
dependencies = [
  "panda3d>=1.10.16",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[project.scripts]
# Friendly alias; the package entrypoint remains `python -m baker`.
mapperoni = "baker.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
