[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irun-ui-kit"
version = "0.1.0"
description = "Experimental procedural UI kit for IRUN (Panda3D DirectGUI)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "IRUN Contributors" }]
dependencies = [
  "panda3d>=1.10.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

